# Face-Verification-Home-Access

./: .gitignore  CMakeLists.txt  Makefile  api.cc  db_utils.cc  db_utils.hh  face_features.cc  face_features.hh  main.cc  main2.cc  main_pi.cc
